--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+  Features:
+    - Added Schall Tank Platoon compatibility
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
   Features:
     - Initial Release
