--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.3
+  Bugfixes:
+    - Fixed loading with some mods that add upgraded versions of vanilla walls
+---------------------------------------------------------------------------------------------------
 Version: 1.0.2
   Bugfixes:
     - Concrete Shore wall recipe was not enabled in saves with Concrete walls already researched
