--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.4
+  Changes:
+    - Changed dependencies to either CanalBuilderWLK or CanalBuilderMAV - have to have one
+---------------------------------------------------------------------------------------------------
 Version: 1.0.3
   Bugfixes:
     - Fixed loading with some mods that add upgraded versions of vanilla walls
